fix query parameters
